<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="#00823F"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"/>

    <Button
            android:id="@+id/btn_login_home0"
            android:layout_width="81dp"
            android:layout_height="33dp"
            android:text="@string/login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp" android:textSize="12sp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/imagen1" app:srcCompat="@drawable/imagen1"
                android:contentDescription="@string/Imagen1" android:visibility="visible"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:src="@drawable/imagen2" app:srcCompat="@drawable/imagen2"
                android:contentDescription="@string/Imagen2"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:src="@drawable/imagen3" app:srcCompat="@drawable/imagen3"
                android:contentDescription="@string/Imagen3"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>