<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registroHorario">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="133dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center">

    <TextView
            android:text="@string/horarios_disponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Hdispo"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayoutboleta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" tools:ignore="UnknownIdInLayout"/>


    <TextView
            android:text="@string/lunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lunes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:layout_editor_absoluteY="46dp"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutlunes"
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:hint="@string/_07_00_22_00"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/lunes"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputlunes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/martes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/martes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteY="153dp"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutmartes"
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:hint="@string/martesHorario"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/martes"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputmartes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="Miercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/miercoles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:layout_editor_absoluteY="260dp"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutmiercoles"
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:hint="07:00 - 22:00"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/miercoles"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputmiercoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="Jueves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/jueves"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:layout_editor_absoluteY="367dp"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutjueves"
            android:layout_width="360dp"
            android:layout_height="wrap_content"

            android:hint="07:00 - 22:00"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/jueves"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputjueves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="Viernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viernes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:layout_editor_absoluteY="474dp"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/textinputlayoutviernes"
                android:layout_width="360dp"
                android:layout_height="wrap_content"

                android:hint="07:00 - 22:00"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/viernes"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputviernes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="Sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sabado"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteY="581dp"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutsabado"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="07:00 - 22:00"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/sabado"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputsabado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="Domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/domingo"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:layout_editor_absoluteY="688dp"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textinputlayoutdomingo"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="07:00 - 22:00"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/domingo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputdomingo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:id="@+id/btnRegistrar"
                android:text="Siguiente"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:onClick="clickBtnRegistroH" android:textSize="20sp"/>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>