<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registro_usuario">

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="133dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center">

            <TextView
                    android:id="@+id/hola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hola"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.061"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    app:layout_constraintHorizontal_bias="0.498"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/name"

                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/hola"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutboleta"
                    android:hint="@string/boletaR"

                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutname">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputboleta"
                        android:maxLength="10"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                    android:text="Genera tu contraseña"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Gcontraseña"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutviernes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <TextView
                    android:id="@+id/instruccionesContraseña"
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="La contraseña debe contener al menos una letra mayúscula, una letra minúscula y un número."
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#072E08"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutcontraseña"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="Contraseña"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/Gcontraseña"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputcontraseña"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" android:textColorHint="#546E7A"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutcontraseña2"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrase_a"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutcontraseña"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputcontraseña2"
                        android:layout_width="match_parent" android:inputType="textPassword"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:text="Contacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contacto"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutcontraseña2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutcelular"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="Celular"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/contacto"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputcelular"
                        android:layout_width="match_parent" android:maxLength="10"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutfacebook"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="Ususario de Facebook"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutcelular"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputfacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textinputlayoutinstagram"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/instagram"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayoutfacebook"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputinstagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btnRegistrar"
                    android:text="Siguiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickBtnRegistro"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>